# C-Concepts

Adapter and Decorator pattern/: CMakeLists.txt  main.cpp
Adapter and Decorator pattern/clib/: CMakeLists.txt
Adapter and Decorator pattern/include/: cloggeradapter.h  decorator.h  logger.h  runningtime_decorator.h
Adapter and Decorator pattern/include/decorators/: timestamp_decorator.h
Adapter and Decorator pattern/src/: cloggeradapter.cpp  decorator.cpp  runningtime_decorator.cpp
Adapter and Decorator pattern/src/decorators/: timestamp_decorator.cpp
Breaking Dependencies/: CMakeLists.txt
Breaking Dependencies/assignment/: CMakeLists.txt  console_writer.cpp  console_writer.h  ilogger.h  itext_writer.h  itime_source.h  logger.cpp  logger.h  main.cpp  program.h  stream_writer.cpp  stream_writer.h  system_time_source.cpp  system_time_source.h
Freelancer Admnistration System/: Assembly_ Freelancer Admnistration System (1).md  Freelancer Admistration System.asm
Resource Limited Programming/: CMakeLists.txt  README.md  Resource Limited Programming.md  fixed_point.cpp  fixed_point.h  main.cpp
Sanitizers and Compiler Warnings/: ANALYSIS_LOG.md  ASSIGNMENT.md  CMakeLists.txt  README.md  ibank.h  main.cpp  money_pot.cpp  money_pot.h
Singleton pattern/assignment/: CMakeLists.txt  main.cpp
Singleton pattern/assignment/include/: clogger_as_writer.h
Singleton pattern/assignment/include/builders/: ilogger_builder.h  logger_builder.h
Singleton pattern/assignment/source/: clogger_as_writer.cpp
Singleton pattern/assignment/source/builder/: logger_builder.cpp
Singleton pattern/assignment/source/global/: runningtime_provider.cpp
Templates/: CMakeLists.txt  assignment.h  main.cpp
Testing/: ASSIGNMENT.md  CMakeLists.txt  README.md  main.cpp
Testing/inc/: guest_list.h  name.h  reducer.h
Testing/src/: guest_list.cpp  name.cpp
Testing/tests/: CMakeLists.txt  tests_guest_list.cpp  tests_name.cpp  tests_reducer.cpp
